--- a/malaria24/ona/templates/ona/html_district_digest.html
+++ b/malaria24/ona/templates/ona/html_district_digest.html
@@ -31,7 +31,7 @@
       <th>Under 5</th>
       <th>Over 5</th>
     </tr>
-    {% for facility in facilities %}
+    {% for facility in facility %}
         <tr>
           <td>{{facility.facility}}</td>
           <td>{{facility.cases}}</td>
