changing fac name

--- a/malaria24/ona/templates/ona/html_district_digest.html
+++ b/malaria24/ona/templates/ona/html_district_digest.html
@@ -33,7 +33,7 @@
     </tr>
     {% for facility in facility %}
       <tr>
-        <td><strong>Total</strong></td>
+        <td><strong>{{facility.facility}}</strong></td>
         <td style="text-align: right;"><strong>{{facility.cases}}</strong></td>
         <td style="text-align: right;"><strong>{{facility.males}}</strong></td>
         <td style="text-align: right;"><strong>{{facility.females}}</strong></td>
