district title change, week add and provincial case check

--- a/malaria24/ona/templates/ona/html_district_digest.html
+++ b/malaria24/ona/templates/ona/html_district_digest.html
@@ -18,7 +18,7 @@
       <td colspan="8" style="text-align: center;"><strong>National Department of Health: Malaria Elimination Programme</strong></td>
     </tr>
     <tr>
-      <td colspan="8" style="text-align: center;"><strong>District MalariaConnect Report</strong></td>
+      <td colspan="8" style="text-align: center;"><strong>MalariaConnect Summary</strong></td>
     </tr>
     <tr>
       <td colspan="8" style="text-align: center;"><strong>{{week}}</strong></td>
