--- a/malaria24/ona/templates/ona/html_national_digest.html
+++ b/malaria24/ona/templates/ona/html_national_digest.html
@@ -32,6 +32,7 @@
       <th>Over 5</th>
     </tr>
     {% for province in provinces %}
+      {% if province.cases %}
         <tr>
           <td>{{province.province}}</td>
           <td style="text-align: right;">{{province.cases}}</td>
@@ -40,6 +41,7 @@
           <td style="text-align: right;">{{province.under5}}</td>
           <td style="text-align: right;">{{province.over5}}</td>
         </tr>
+      {% endif %}
     {% endfor %}
     <tr>
       <td><strong>Total</strong></td>
