Small amendment to align columns.

--- a/malaria24/ona/templates/ona/html_district_digest.html
+++ b/malaria24/ona/templates/ona/html_district_digest.html
@@ -46,8 +46,7 @@
       {% endif %}
     {% endfor %}
     <tr>
-      <td></td>
-      <td><strong>Total</strong></td>
+      <td colspan="2"><strong>Total</strong></td>
       <td style="text-align: right;"><strong>{{totals.total_cases}}</strong></td>
       <td style="text-align: right;"><strong>{{totals.total_males}}</strong></td>
       <td style="text-align: right;"><strong>{{totals.total_females}}</strong></td>
